--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ python:
 # command to install dependencies
 install:
   - python setup.py build sdist
-  - pip install -r requirements-tests.txt
+  - pip install -r requirements-test.txt
 # command to run tests
 script: pytest tests/
